# contrive

./: Cargo.toml  LICENSE  README.md
example_template/: lecture.json
src/: main.rs
