[package]
name = "contrive"
version = "0.1.1"
authors = ["CieciaOne <CieciaV2.0@gmail.com>"]
edition = "2018"
description = "Contrive is a simple utility to automate creation of directory and file structures"
license = "MIT"

readme = "README.md"
repository = "https://github.com/CieciaOne/contrive"
keywords = ["contrive", "file", "directory", "create", "template"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata]
package-name = "contrive"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.64"
dirs = "3.0.2"
